--- a/console/src/main/webapp/index.html
+++ b/console/src/main/webapp/index.html
@@ -1,10 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Test page</title>
+  <meta charset="utf-8">
+  <base href="/console/">
+
+  <link rel="stylesheet" href="lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="styles/app.css">
+
+  <title>Routing</title>
 </head>
-<body>
-Hello you !
+
+<body ng-app="admin_console" ng-strict-di ng-controller="AppController">
+
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><a ng-link="home">Dashboard</a></li>
+        <li><a ng-link="all/users">Users</a></li>
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li class="loader" ng-if="router.isNavigating">
+          <i class="fa fa-spinner fa-spin fa-2x"></i>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="container">
+    <ng-viewport></ng-viewport>
+  </div>
+
+  <script src="lib/angular.js"></script>
+  <script src="lib/angular-resource.js"></script>
+  <script src="lib/router.es5.js"></script>
+
+  <script src="app.js"></script>
+  <script src="components/home/home.js"></script>
+  <script src="components/users/users.js"></script>
+  <script src="services/userServices.js"></script>
 </body>
-</html>
