--- a/console/src/main/webapp/index.html
+++ b/console/src/main/webapp/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles/app.css">
 
-  <title>Routing</title>
+  <title>Admin Console</title>
 </head>
 
 <body ng-app="admin_console" ng-strict-di ng-controller="AppController">
@@ -38,5 +38,6 @@
   <script src="app.js"></script>
   <script src="components/home/home.js"></script>
   <script src="components/users/users.js"></script>
+  <script src="components/groups/groups.js"></script>
   <script src="services/userServices.js"></script>
 </body>
