--- a/console/src/main/webapp/index.html
+++ b/console/src/main/webapp/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <base href="/console/">
 
-  <link rel="stylesheet" href="lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="styles/app.css">
 
   <title>Admin Console</title>
@@ -31,9 +31,9 @@
     <ng-viewport></ng-viewport>
   </div>
 
-  <script src="lib/angular.js"></script>
-  <script src="lib/angular-resource.js"></script>
-  <script src="lib/router.es5.js"></script>
+  <script src="node_modules/angular/angular.js"></script>
+  <script src="node_modules/angular-resource/angular-resource.js"></script>
+  <script src="node_modules/angular-new-router/dist/router.es5.js"></script>
 
   <script src="app.js"></script>
   <script src="components/home/home.js"></script>
