--- a/ldapadmin/src/main/webapp/console/app/index.html
+++ b/ldapadmin/src/main/webapp/console/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <base href="/console/app/">
+  <base href="/ldapadmin/console/app/">
 
   <link rel="stylesheet" href="../public/libraries.css">
   <link rel="stylesheet" href="../public/app.css">
