--- a/ldapadmin/src/main/webapp/console/app/assets/index.html
+++ b/ldapadmin/src/main/webapp/console/app/assets/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <base href="/ldapadmin/console/app/">
+  <base href="/ldapadmin/console/public/">
 
-  <link rel="stylesheet" href="../public/libraries.css">
-  <link rel="stylesheet" href="../public/app.css">
+  <link rel="stylesheet" href="libraries.css">
+  <link rel="stylesheet" href="app.css">
 
   <title>Admin Console</title>
 </head>
@@ -32,9 +32,9 @@
     <ng-viewport></ng-viewport>
   </div>
 
-  <script src="../public/libraries.js"></script>
-  <script src="../public/templates.js"></script>
-  <script src="../public/app.js"></script>
+  <script src="libraries.js"></script>
+  <script src="templates.js"></script>
+  <script src="app.js"></script>
   <script>require('app');</script>
 
 </body>
